2008-11-12  Dodji Seketeli  <dodji@redhat.com>

	PR debug/27574
	* cgraph.h: New abstract_and_needed member to struct cgraph_node.
	* cgraphunit.c (cgraph_analyze_functions): Flag abstract functions
	- which clones are reachable - as "abstract and needed".
	* cgraph.c (cgraph_release_function_body):  If a node is "abstract and needed",
	do not release its DECL_INITIAL() content because that will be needed to emit
	debug info.

2008-11-12  Steve Ellcey  <sje@cup.hp.com>

	PR target/27880
	* configure.ac (GCC_CHECK_UNWIND_GETIPINFO): Use this macro
	to set HAVE_GETIPINFO.
	* aclocal.m4: Include ../config/unwind_ipinfo.m4.
	* configure: Regenerate.
	* config.in: Regenerate.

2008-11-12  Jack Howarth  <howarth@bromo.med.uc.edu>

	PR bootstrap/38010
	* gcc/config.gcc: Use darwin9.h on darwin10 as well.

2008-11-12  Jakub Jelinek  <jakub@redhat.com>

	Revert:
	2008-10-21  Jakub Jelinek  <jakub@redhat.com>
	* gimplify.c (gimplify_expr): Drop TREE_OVERFLOW from
	INTEGER_CSTs.

2008-11-12  Jason Merrill  <jason@redhat.com>

	PR c++/38007
	* c-common.c (c_common_signed_or_unsigned_type): Remove C++
	special casing.

2008-11-12  Anatoly Sokolov  <aesok@post.ru>

	* config/avr/avr.c (avr_mcu_t): Add atmega16hvb, atmega32hvb,
	atmega4hvd, atmega8hvd, atmega64c1, atmega64m1, atmega16u4 and
	atmega32u6 devices.
	* config/avr/avr.h (LINK_SPEC, CRT_BINUTILS_SPECS): (Ditto.).
	* config/avr/t-avr (MULTILIB_MATCHES): (Ditto.).

2008-11-12  Ulrich Weigand  <Ulrich.Weigand@de.ibm.com>

	* gcc/config/s390/s390.h (INITIAL_FRAME_ADDRESS_RTX): Remove
	packed-stack special handling.
	(FRAME_ADDR_RTX): Add definition.

2008-11-12  Jakub Jelinek  <jakub@redhat.com>

	PR target/35366
	* fold-const.c (native_encode_string): New function.
	(native_encode_expr): Use it for STRING_CST.

2008-11-12  DJ Delorie  <dj@redhat.com>

	* config/m32c/cond.md (cond_to_int peephole2): Don't eliminate the
	insns if the intermediate value will be used later.

2008-11-12  Andreas Schwab  <schwab@suse.de>
