@@ -1,3 +1,11 @@
+2008-11-12  Jakub Jelinek  <jakub@redhat.com>
+
+	PR c++/36478
+	Revert:
+	2007-05-07  Mike Stump  <mrs@apple.com>
+	* parser.c (check_empty_body): Add.
+	(cp_parser_iteration_statement): Add call to check_empty_body.
+
 2008-11-12  Jason Merrill  <jason@redhat.com>
 
 	PR c++/38007
