@@ -1,3 +1,8 @@
+2008-11-12  Jakub Jelinek  <jakub@redhat.com>
+
+	PR c++/36478
+	* g++.old-deja/g++.mike/empty.C: Remove.
+
 2008-11-12  Dodji Seketeli  <dodji@redhat.com>
 
 	PR debug/27574
